--- a/01-Introduction.Rmd
+++ b/01-Introduction.Rmd
@@ -9,7 +9,7 @@ Contributions to base R are possible in a number of different ways. Some of them
 1. Contributing to bug fixing: Refer [Bug Tracking](#BugTrack) and [Reviewing Bugs](#ReviewBugs).
 2. Contributing to translations: Refer [Translations](#).
 3. Testing R before release: Refer [Testing Pre-release R Versions](#TestRVer).
-4. Contributing to documentation and tutorials: Refer [Documenting R](#Doc).
+4. Contributing to documentation and tutorials, including this guide: Refer [Documenting R](#Doc) and [Contributing to this guide](#how-to-contribute-to-this-guide).
 
 <!-- TODO(Saranjeet): Welcome to Bug BBQ slides -->
 <!-- TODO(Saranjeet): README on Bug BBQ repo -->
