Update r translations link

--- a/15-additional_resources.Rmd
+++ b/15-additional_resources.Rmd
@@ -2,13 +2,13 @@
 
 There are a number of further resources to help with contributions to R.
 
-## R Contributor Site
+## R Contributor site
 
 Contains information for people interested in contributing to R core, including details for the [R Contribution Working Group](https://contributor.r-project.org/working-group), the [R Contributors Slack workspace](https://contributor.r-project.org/slack) and upcoming [R Contributor events and meetups](https://contributor.r-project.org/events/). 
 
-## R Translation Teams
+## R Translations site
 
-There are a number of translation projects already underway or completed, more information on how to offer your help with one of these, contact the teams involved, and to find more detailed instructions for translating R Messages or R Manuals can be found on the [R Translation Teams site](https://translation.r-project.org/).
+There are a number of translation projects already underway or completed, more information on how to offer your help with one of these, contact others involved in translations, and to find more detailed instructions for translating R Messages or R Manuals can be found on the [R Translations site](https://contributor.r-project.org/translations/).
 
 ## R manuals
 
